--- a/.github/workflows/main_contructor.yml
+++ b/.github/workflows/main_contructor.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Set up Node.js version
-      - uses: actions/setup-node@v4
+        uses: actions/setup-node@v4
         with:
           node-version: 20
 
@@ -31,8 +31,9 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: .
-
+            path: |
+              build/*
+              package.json
   deploy:
     runs-on: ubuntu-latest
     needs: build
