--- a/.github/workflows/main_contructor.yml
+++ b/.github/workflows/main_contructor.yml
@@ -31,9 +31,8 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-            path: |
-              build/*
-              package.json
+          path: ./build/
+
   deploy:
     runs-on: ubuntu-latest
     needs: build
